--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Mostpaster</title>
 		<meta charset="utf-8" />
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 		<link rel="icon" href="%sveltekit.assets%/icon.png" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
